[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=2]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PanelHost" type="Panel" parent="."]
margin_left = 6.0
margin_top = 130.0
margin_right = 206.0
margin_bottom = 290.0
rect_min_size = Vector2( 200, 160 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelHost"]
margin_left = 4.0
margin_top = 6.0
margin_right = 195.0
margin_bottom = 20.0
text = "Create Server"
align = 1

[node name="Label2" type="Label" parent="PanelHost"]
margin_left = 4.19002
margin_top = 23.0451
margin_right = 84.19
margin_bottom = 37.0451
text = "Server name"

[node name="txtServerName" type="LineEdit" parent="PanelHost"]
margin_left = 2.79333
margin_top = 40.5036
margin_right = 60.7933
margin_bottom = 64.5036
rect_min_size = Vector2( 190, 0 )

[node name="Label3" type="Label" parent="PanelHost"]
margin_left = 4.19003
margin_top = 70.5321
margin_right = 44.19
margin_bottom = 84.5321
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtServerPort" type="LineEdit" parent="PanelHost"]
margin_left = 4.19002
margin_top = 88.6889
margin_right = 62.19
margin_bottom = 112.689
text = "4546"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="PanelHost"]
margin_left = 71.2304
margin_top = 71.2304
margin_right = 111.23
margin_bottom = 85.2304
text = "Max connections"

[node name="txtMaxPlayers" type="SpinBox" parent="PanelHost"]
margin_left = 72.0
margin_top = 89.0
margin_right = 146.0
margin_bottom = 113.0
min_value = 2.0
max_value = 16.0
value = 8.0

[node name="btCreate" type="Button" parent="PanelHost"]
margin_left = 4.83189
margin_top = 121.316
margin_right = 57.8319
margin_bottom = 141.316
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelJoin" type="Panel" parent="."]
margin_left = 6.0
margin_top = 296.0
margin_right = 206.0
margin_bottom = 406.0
rect_min_size = Vector2( 200, 110 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelJoin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 193.0
margin_bottom = 19.0
text = "Join Server"
align = 1

[node name="Label2" type="Label" parent="PanelJoin"]
margin_left = 5.0
margin_top = 25.0
margin_right = 23.0
margin_bottom = 39.0
text = "IP"

[node name="txtJoinIP" type="LineEdit" parent="PanelJoin"]
margin_left = 40.0
margin_top = 22.63
margin_right = 180.0
margin_bottom = 46.63
rect_min_size = Vector2( 140, 0 )
text = "127.0.0.1"

[node name="Label3" type="Label" parent="PanelJoin"]
margin_left = 5.0
margin_top = 53.0
margin_right = 45.0
margin_bottom = 67.0
text = "Port"

[node name="txtJoinPort" type="LineEdit" parent="PanelJoin"]
margin_left = 40.0
margin_top = 51.68
margin_right = 98.0
margin_bottom = 75.68
text = "4546"

[node name="btJoin" type="Button" parent="PanelJoin"]
margin_left = 5.67224
margin_top = 82.5627
margin_right = 40.6722
margin_bottom = 102.563
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer" type="Panel" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 206.0
margin_bottom = 126.0
rect_min_size = Vector2( 200, 120 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelPlayer"]
margin_left = 1.50204
margin_top = 3.50482
margin_right = 84.502
margin_bottom = 17.5048
text = "Player name:"

[node name="txtPlayerName" type="LineEdit" parent="PanelPlayer"]
margin_left = 1.0
margin_top = 19.0
margin_right = 141.0
margin_bottom = 43.0
rect_min_size = Vector2( 140, 0 )

[node name="Label2" type="Label" parent="PanelPlayer"]
margin_left = 74.9133
margin_top = 48.2538
margin_right = 114.913
margin_bottom = 62.2538
text = "Color:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerIcon" type="Sprite" parent="PanelPlayer"]
position = Vector2( 39, 82 )
texture = ExtResource( 1 )

[node name="btColor" type="ColorPickerButton" parent="PanelPlayer"]
margin_left = 75.2755
margin_top = 63.5076
margin_right = 135.276
margin_bottom = 83.5076
rect_min_size = Vector2( 60, 0 )
color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btDefaultColor" type="Button" parent="PanelPlayer"]
margin_left = 75.2538
margin_top = 87.8699
margin_right = 133.254
margin_bottom = 107.87
rect_min_size = Vector2( 60, 0 )
text = "Default"
[connection signal="pressed" from="PanelHost/btCreate" to="." method="_on_btCreate_pressed"]
[connection signal="pressed" from="PanelJoin/btJoin" to="." method="_on_btJoin_pressed"]
[connection signal="color_changed" from="PanelPlayer/btColor" to="." method="_on_btColor_color_changed"]
[connection signal="pressed" from="PanelPlayer/btDefaultColor" to="." method="_on_btDefaultColor_pressed"]
